@@ -14,6 +14,7 @@ xx/xx/2004 autofs-4.1.4
     - note this requires a kernel patch to work, see README.patches.
 - correct whitespace handling in maps.
 - mount table handling cleanup.
+- fix multi map lookup broken after the map update patch.
 
 19/05/2004 autofs-4.1.3
 -----------------------
